k8s/falkordb-deployment.yaml
# Copyright 2020 Appvia Ltd <info@appvia.io>

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.appvia.krane/version: v0.1.6
    io.appvia.krane.service: falkordb
  name: falkordb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.appvia.krane.service: falkordb
  strategy: {}
  template:
    metadata:
      labels:
        io.appvia.krane.network/default: "true"
        io.appvia.krane.service: falkordb
    spec:
      containers:
      - image: falkordb/falkordb:v4.20.3
        imagePullPolicy: "IfNotPresent"
        name: falkordb
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "1"
            memory: "209715200"
          requests:
            cpu: 200m
            memory: "20971520"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
